# proofmark-studio

./: .env.example  .gitignore  .vercelignore  README.md  launch-app.cmd  pyproject.toml  requirements.txt  run-all.cmd  run.bat  run.ps1  run.py  run_tests.ps1  vercel.json  web_app.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: about.md  adding-a-tool.md  architecture.md  art-background.md  changelog.md  deployment.md  feature-flags.md  observability.md
proofmark_studio/: __init__.py  feature_flags.py  hub_app.py  markdown_lite.py  og_image.py  tool_registry.py
proofmark_studio/static/hub/: index.html
proofmark_studio/static/hub/src/: app.jsx  components.jsx  illust.jsx  studio-canvas.jsx  tools.jsx
scripts/: launch-all.ps1  launch-local.ps1  screenshot.py  screenshot_roadmap.py
tasks/: todo.md
tests/: test_api_tools_respects_flags.py  test_feature_flags.py  test_web_app.py
